cmake_minimum_required(VERSION 3.21)
project(cpp_programming)

set(CMAKE_CXX_STANDARD 20)

add_executable(begin1 begin/begin1.cpp)
add_executable(begin2 begin/begin2.cpp)
add_executable(begin3 begin/begin3.cpp)
add_executable(begin4 begin/begin4.cpp)
add_executable(begin5 begin/begin5.cpp)
add_executable(begin6 begin/begin6.cpp)
add_executable(begin7 begin/begin7.cpp)
add_executable(begin8 begin/begin8.cpp)
add_executable(begin9 begin/begin9.cpp)
add_executable(begin10 begin/begin10.cpp)
add_executable(begin11 begin/begin11.cpp)
add_executable(begin12 begin/begin12.cpp)
add_executable(begin13 begin/begin13.cpp)
add_executable(begin14 begin/begin14.cpp)
add_executable(begin15 begin/begin15.cpp)
add_executable(begin16 begin/begin16.cpp)
add_executable(begin17 begin/begin17.cpp)
add_executable(begin18 begin/begin18.cpp)
add_executable(begin19 begin/begin19.cpp)
add_executable(begin20 begin/begin20.cpp)
add_executable(begin21 begin/begin21.cpp)
add_executable(begin22 begin/begin22.cpp)
add_executable(begin23 begin/begin23.cpp)
add_executable(begin24 begin/begin24.cpp)
add_executable(begin25 begin/begin25.cpp)
add_executable(begin26 begin/begin26.cpp)
add_executable(begin27 begin/begin27.cpp)
add_executable(begin28 begin/begin28.cpp)
add_executable(begin29 begin/begin29.cpp)
add_executable(begin30 begin/begin30.cpp)
add_executable(begin31 begin/begin31.cpp)
add_executable(begin32 begin/begin32.cpp)
add_executable(begin33 begin/begin33.cpp)
add_executable(begin34 begin/begin34.cpp)
add_executable(begin35 begin/begin35.cpp)
add_executable(begin36 begin/begin36.cpp)
add_executable(begin37 begin/begin37.cpp)
add_executable(begin38 begin/begin38.cpp)
add_executable(begin39 begin/begin39.cpp)
add_executable(begin40 begin/begin40.cpp)
