cmake_minimum_required(VERSION 3.21)
project(cpp_programming)

set(CMAKE_CXX_STANDARD 20)

add_executable(begin1 begin/begin1.cpp)
add_executable(begin2 begin/begin2.cpp)
add_executable(begin3 begin/begin3.cpp)
add_executable(begin4 begin/begin4.cpp)
add_executable(begin5 begin/begin5.cpp)
add_executable(begin6 begin/begin6.cpp)
add_executable(begin7 begin/begin7.cpp)
add_executable(begin8 begin/begin8.cpp)
add_executable(begin9 begin/begin9.cpp)
add_executable(begin10 begin/begin10.cpp)
add_executable(begin11 begin/begin11.cpp)
add_executable(begin12 begin/begin12.cpp)
add_executable(begin13 begin/begin13.cpp)
add_executable(begin14 begin/begin14.cpp)
add_executable(begin15 begin/begin15.cpp)
add_executable(begin16 begin/begin16.cpp)
add_executable(begin17 begin/begin17.cpp)
add_executable(begin18 begin/begin18.cpp)
add_executable(begin19 begin/begin19.cpp)
add_executable(begin20 begin/begin20.cpp)
add_executable(begin21 begin/begin21.cpp)
add_executable(begin22 begin/begin22.cpp)
add_executable(begin23 begin/begin23.cpp)
add_executable(begin24 begin/begin24.cpp)
add_executable(begin25 begin/begin25.cpp)
add_executable(begin26 begin/begin26.cpp)
add_executable(begin27 begin/begin27.cpp)
add_executable(begin28 begin/begin28.cpp)
add_executable(begin29 begin/begin29.cpp)
add_executable(begin30 begin/begin30.cpp)
add_executable(begin31 begin/begin31.cpp)
add_executable(begin32 begin/begin32.cpp)
add_executable(begin33 begin/begin33.cpp)
add_executable(begin34 begin/begin34.cpp)
add_executable(begin35 begin/begin35.cpp)
add_executable(begin36 begin/begin36.cpp)
add_executable(begin37 begin/begin37.cpp)
add_executable(begin38 begin/begin38.cpp)
add_executable(begin39 begin/begin39.cpp)
add_executable(begin40 begin/begin40.cpp)

add_executable(integer1 integer/integer1.cpp)
add_executable(integer2 integer/integer2.cpp)
add_executable(integer3 integer/integer3.cpp)
add_executable(integer4 integer/integer4.cpp)
add_executable(integer5 integer/integer5.cpp)
add_executable(integer6 integer/integer6.cpp)
add_executable(integer7 integer/integer7.cpp)
add_executable(integer8 integer/integer8.cpp)
add_executable(integer9 integer/integer9.cpp)
add_executable(integer10 integer/integer10.cpp)
add_executable(integer11 integer/integer11.cpp)
add_executable(integer12 integer/integer12.cpp)
add_executable(integer13 integer/integer13.cpp)
add_executable(integer14 integer/integer14.cpp)
add_executable(integer15 integer/integer15.cpp)
add_executable(integer16 integer/integer16.cpp)
add_executable(integer17 integer/integer17.cpp)
add_executable(integer18 integer/integer18.cpp)
add_executable(integer19 integer/integer19.cpp)
add_executable(integer20 integer/integer20.cpp)
add_executable(integer21 integer/integer21.cpp)
add_executable(integer22 integer/integer22.cpp)
add_executable(integer23 integer/integer23.cpp)
add_executable(integer24 integer/integer24.cpp)
add_executable(integer25 integer/integer25.cpp)
add_executable(integer26 integer/integer26.cpp)
add_executable(integer27 integer/integer27.cpp)
add_executable(integer28 integer/integer28.cpp)
add_executable(integer29 integer/integer29.cpp)
add_executable(integer30 integer/integer30.cpp)